Check Long precision by converting to strings via Rhino
git-svn-id: https://mongodb-rhino.googlecode.com/svn/trunk@64 4c41b6da-ce32-00c4-2e13-d615a01b235c